added debt notebook
