# src/debt-book/dto/update-debt-book-entry.dto.ts
@@ -1,0 +1,6 @@
+import { PartialType } from '@nestjs/swagger';
+import { CreateDebtBookEntryDto } from './create-debt-book-entry.dto';
+
+export class UpdateDebtBookEntryDto extends PartialType(
+  CreateDebtBookEntryDto,
+) {}
